results/SVCOMP/4-shot/log-ExSymExe16-2024_03_18_18_31_54.txt
class Main {
  static int field;

  //@ ensures \result <==> z == 0;
  //@ ensures !\result <==> z != 0;
  public static boolean f() {
    int x = 3;
    Main inst = new Main();
    field = 9;
    return inst.test(x, field);
  }
  
  //@ requires z >= 0;
  //@ ensures z == 0 ==> \result == false;
  //@ ensures z != 0 ==> \result == true;
  public boolean test(int x, int z) {
    System.out.println("Testing ExSymExe16");
    int y = 3;
    x = z - y;
    if (z == 0) {
      System.out.println("branch FOO1");
      return false;
    } else System.out.println("branch FOO2");
    if (x == 0) System.out.println("branch BOO1");
    else
      System.out.println("branch BOO2");
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExe16.java:4: error: cannot find symbol
  //@ ensures \result <==> z == 0;
                           ^
  symbol:   variable z
  location: class Main
/home/max/Documents/JMLGPT/tmp/ExSymExe16.java:5: error: cannot find symbol
  //@ ensures !\result <==> z != 0;
                            ^
  symbol:   variable z
  location: class Main
2 errors

